# PE-Hackathon-Template-2026

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  RUNBOOK.md  docker-compose.yml  loki-config.yml  nginx.conf  promtail-config.yml  pyproject.toml  run.py  wsgi.py
.github/: Deployments.md
.github/workflows/: deploy.yml  rollback-to-ref.yml  rollback.yml  test.yml
app/: __init__.py  cache.py  config.py  database.py  logging_config.py
app/lib/: api.py  utils.py
app/models/: __init__.py  alert.py  event.py  url.py  user.py
app/routes/: __init__.py  alerts.py  bulk.py  events.py  metrics.py  shortener.py  urls.py  users.py
app/services/: __init__.py  db_errors.py  errors.py  events_service.py  schemas.py  shortener_service.py  urls_service.py  users_service.py
docs/: ADL.md  CAPACITY_LIMITS.md  FAILURE_MODES.md  README.md  TROUBLESHOOTING_GUIDE.md  runbook.md
migrations/: 001_create_urls_table.py  002_decouple_event_url_fk.py  003_add_unique_original_url_constraint.py
monitoring/: alert_rules.yml  alertmanager.yml  discord_bot.py  discord_relay.py  prometheus.yml
prometheus/: prometheus.yml  rules.yml
scripts/: chaos.py  deploy-vm.sh  k6-quest.js  k6-test.js  seed.py
tests/: conftest.py  test_alerts.py  test_graceful_errors.py  test_integration_events.py  test_integration_health.py  test_integration_shortener.py  test_integration_urls.py  test_integration_users.py  test_unit_config.py  test_unit_db_errors.py  test_unit_logging.py  test_unit_schemas.py  test_unit_services.py  test_unit_utils.py
website/: index.html
(+3 files in other folders)
