[project]
name = "mlh-pe-hackathon"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faker>=33.0",
    "flask>=3.1",
    "gunicorn>=23.0",
    "peewee>=3.17",
    "peewee-migrate>=1.15.0",
    "pydantic>=2.9",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "prometheus-client>=0.20",
    "python-json-logger>=3.0",
    "redis>=6.0",
    "prometheus-flask-exporter>=0.23",
]
